syntax = "proto3";
package virtengine.enclave.v1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "virtengine/enclave/v1/types.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/enclave/v1";

// Msg defines the enclave Msg service
service Msg {
  option (cosmos.msg.v1.service) = true;

  // RegisterEnclaveIdentity registers a new enclave identity for a validator
  rpc RegisterEnclaveIdentity(MsgRegisterEnclaveIdentity) returns (MsgRegisterEnclaveIdentityResponse);

  // RotateEnclaveIdentity initiates a key rotation for a validator's enclave
  rpc RotateEnclaveIdentity(MsgRotateEnclaveIdentity) returns (MsgRotateEnclaveIdentityResponse);

  // ProposeMeasurement proposes a new enclave measurement for the allowlist
  rpc ProposeMeasurement(MsgProposeMeasurement) returns (MsgProposeMeasurementResponse);

  // RevokeMeasurement revokes an enclave measurement from the allowlist
  rpc RevokeMeasurement(MsgRevokeMeasurement) returns (MsgRevokeMeasurementResponse);

  // UpdateParams updates the module parameters (governance only)
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgRegisterEnclaveIdentity registers a new enclave identity for a validator
message MsgRegisterEnclaveIdentity {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "validator_address";
  option (amino.name) = "enclave/MsgRegisterEnclaveIdentity";

  // ValidatorAddress is the validator operator address (sender must be the validator operator)
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // TEEType is the type of TEE
  TEEType tee_type = 2 [
    (gogoproto.jsontag) = "tee_type",
    (gogoproto.moretags) = "yaml:\"tee_type\""
  ];

  // MeasurementHash is the enclave measurement hash
  bytes measurement_hash = 3 [
    (gogoproto.jsontag) = "measurement_hash",
    (gogoproto.moretags) = "yaml:\"measurement_hash\""
  ];

  // SignerHash is the signer measurement (MRSIGNER)
  bytes signer_hash = 4 [
    (gogoproto.jsontag) = "signer_hash,omitempty",
    (gogoproto.moretags) = "yaml:\"signer_hash\""
  ];

  // EncryptionPubKey is the enclave's public key for encryption
  bytes encryption_pub_key = 5 [
    (gogoproto.jsontag) = "encryption_pub_key",
    (gogoproto.moretags) = "yaml:\"encryption_pub_key\""
  ];

  // SigningPubKey is the enclave's public key for signing
  bytes signing_pub_key = 6 [
    (gogoproto.jsontag) = "signing_pub_key",
    (gogoproto.moretags) = "yaml:\"signing_pub_key\""
  ];

  // AttestationQuote is the raw attestation quote
  bytes attestation_quote = 7 [
    (gogoproto.jsontag) = "attestation_quote",
    (gogoproto.moretags) = "yaml:\"attestation_quote\""
  ];

  // AttestationChain is the certificate chain
  repeated bytes attestation_chain = 8 [
    (gogoproto.jsontag) = "attestation_chain",
    (gogoproto.moretags) = "yaml:\"attestation_chain\""
  ];

  // ISVProdID is the product ID
  uint32 isv_prod_id = 9 [
    (gogoproto.jsontag) = "isv_prod_id",
    (gogoproto.moretags) = "yaml:\"isv_prod_id\""
  ];

  // ISVSVN is the security version number
  uint32 isv_svn = 10 [
    (gogoproto.jsontag) = "isv_svn",
    (gogoproto.moretags) = "yaml:\"isv_svn\""
  ];

  // QuoteVersion is the quote format version
  uint32 quote_version = 11 [
    (gogoproto.jsontag) = "quote_version",
    (gogoproto.moretags) = "yaml:\"quote_version\""
  ];
}

// MsgRegisterEnclaveIdentityResponse is the response for MsgRegisterEnclaveIdentity
message MsgRegisterEnclaveIdentityResponse {
  // KeyFingerprint is the fingerprint of the registered key
  string key_fingerprint = 1 [
    (gogoproto.jsontag) = "key_fingerprint",
    (gogoproto.moretags) = "yaml:\"key_fingerprint\""
  ];

  // ExpiryHeight is the block height when the identity expires
  int64 expiry_height = 2 [
    (gogoproto.jsontag) = "expiry_height",
    (gogoproto.moretags) = "yaml:\"expiry_height\""
  ];
}

// MsgRotateEnclaveIdentity initiates a key rotation for a validator's enclave
message MsgRotateEnclaveIdentity {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "validator_address";
  option (amino.name) = "enclave/MsgRotateEnclaveIdentity";

  // ValidatorAddress is the validator operator address
  string validator_address = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "validator_address",
    (gogoproto.moretags) = "yaml:\"validator_address\""
  ];

  // NewEncryptionPubKey is the new enclave encryption public key
  bytes new_encryption_pub_key = 2 [
    (gogoproto.jsontag) = "new_encryption_pub_key",
    (gogoproto.moretags) = "yaml:\"new_encryption_pub_key\""
  ];

  // NewSigningPubKey is the new enclave signing public key
  bytes new_signing_pub_key = 3 [
    (gogoproto.jsontag) = "new_signing_pub_key",
    (gogoproto.moretags) = "yaml:\"new_signing_pub_key\""
  ];

  // NewAttestationQuote is the new attestation quote
  bytes new_attestation_quote = 4 [
    (gogoproto.jsontag) = "new_attestation_quote",
    (gogoproto.moretags) = "yaml:\"new_attestation_quote\""
  ];

  // NewAttestationChain is the new certificate chain
  repeated bytes new_attestation_chain = 5 [
    (gogoproto.jsontag) = "new_attestation_chain",
    (gogoproto.moretags) = "yaml:\"new_attestation_chain\""
  ];

  // NewMeasurementHash is the new measurement hash (if enclave was upgraded)
  bytes new_measurement_hash = 6 [
    (gogoproto.jsontag) = "new_measurement_hash,omitempty",
    (gogoproto.moretags) = "yaml:\"new_measurement_hash\""
  ];

  // NewISVSVN is the new security version
  uint32 new_isv_svn = 7 [
    (gogoproto.jsontag) = "new_isv_svn",
    (gogoproto.moretags) = "yaml:\"new_isv_svn\""
  ];

  // OverlapBlocks is the number of blocks for which both keys are valid
  int64 overlap_blocks = 8 [
    (gogoproto.jsontag) = "overlap_blocks",
    (gogoproto.moretags) = "yaml:\"overlap_blocks\""
  ];
}

// MsgRotateEnclaveIdentityResponse is the response for MsgRotateEnclaveIdentity
message MsgRotateEnclaveIdentityResponse {
  // NewKeyFingerprint is the fingerprint of the new key
  string new_key_fingerprint = 1 [
    (gogoproto.jsontag) = "new_key_fingerprint",
    (gogoproto.moretags) = "yaml:\"new_key_fingerprint\""
  ];

  // OverlapStartHeight is when both keys become valid
  int64 overlap_start_height = 2 [
    (gogoproto.jsontag) = "overlap_start_height",
    (gogoproto.moretags) = "yaml:\"overlap_start_height\""
  ];

  // OverlapEndHeight is when the old key becomes invalid
  int64 overlap_end_height = 3 [
    (gogoproto.jsontag) = "overlap_end_height",
    (gogoproto.moretags) = "yaml:\"overlap_end_height\""
  ];
}

// MsgProposeMeasurement proposes a new enclave measurement for the allowlist
message MsgProposeMeasurement {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "enclave/MsgProposeMeasurement";

  // Authority is the governance authority address
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // MeasurementHash is the enclave measurement hash to add
  bytes measurement_hash = 2 [
    (gogoproto.jsontag) = "measurement_hash",
    (gogoproto.moretags) = "yaml:\"measurement_hash\""
  ];

  // TEEType is the TEE type this measurement is for
  TEEType tee_type = 3 [
    (gogoproto.jsontag) = "tee_type",
    (gogoproto.moretags) = "yaml:\"tee_type\""
  ];

  // Description is a human-readable description
  string description = 4 [
    (gogoproto.jsontag) = "description",
    (gogoproto.moretags) = "yaml:\"description\""
  ];

  // MinISVSVN is the minimum required security version
  uint32 min_isv_svn = 5 [
    (gogoproto.jsontag) = "min_isv_svn",
    (gogoproto.moretags) = "yaml:\"min_isv_svn\""
  ];

  // ExpiryBlocks is the number of blocks until expiry (0 for no expiry)
  int64 expiry_blocks = 6 [
    (gogoproto.jsontag) = "expiry_blocks,omitempty",
    (gogoproto.moretags) = "yaml:\"expiry_blocks\""
  ];
}

// MsgProposeMeasurementResponse is the response for MsgProposeMeasurement
message MsgProposeMeasurementResponse {
  // MeasurementHash is the hash of the added measurement (hex-encoded)
  string measurement_hash = 1 [
    (gogoproto.jsontag) = "measurement_hash",
    (gogoproto.moretags) = "yaml:\"measurement_hash\""
  ];
}

// MsgRevokeMeasurement revokes an enclave measurement from the allowlist
message MsgRevokeMeasurement {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "enclave/MsgRevokeMeasurement";

  // Authority is the governance authority address
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // MeasurementHash is the enclave measurement hash to revoke
  bytes measurement_hash = 2 [
    (gogoproto.jsontag) = "measurement_hash",
    (gogoproto.moretags) = "yaml:\"measurement_hash\""
  ];

  // Reason is the reason for revocation
  string reason = 3 [
    (gogoproto.jsontag) = "reason",
    (gogoproto.moretags) = "yaml:\"reason\""
  ];
}

// MsgRevokeMeasurementResponse is the response for MsgRevokeMeasurement
message MsgRevokeMeasurementResponse {}

// MsgUpdateParams is the message for updating module parameters
message MsgUpdateParams {
  option (gogoproto.equal) = false;
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "enclave/MsgUpdateParams";

  // Authority is the address that controls the module (x/gov module account)
  string authority = 1 [
    (cosmos_proto.scalar) = "cosmos.AddressString",
    (gogoproto.jsontag) = "authority",
    (gogoproto.moretags) = "yaml:\"authority\""
  ];

  // Params are the new module parameters
  Params params = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "params",
    (gogoproto.moretags) = "yaml:\"params\""
  ];
}

// MsgUpdateParamsResponse is the response for MsgUpdateParams
message MsgUpdateParamsResponse {}
